apps/dssp-jtest-4/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-jtest-4
  namespace: dev
  labels:
    app: dssp-jtest-4
    backstage.io/kubernetes-id: dssp-jtest-4
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-jtest-4
  template:
    metadata:
      labels:
        app: dssp-jtest-4
        backstage.io/kubernetes-id: dssp-jtest-4
        environment: dev
    spec:
      containers:
        - name: dssp-jtest-4
          image: chaitanyapandeygspann/dssp-jtest-4:1.0.1
          ports:
            - containerPort: 8080
