apps/dssp-jtest-4/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-jtest-4
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-jtest-4
spec:
  selector:
    app: dssp-jtest-4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
